// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAddressInput renders the matched address info in a disabled state 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box snap-ui-renderer__matched-account-info mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
            style="height: 48px; opacity: 0.5; cursor: not-allowed;"
          >
            <div
              class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
            >
              <div
                class="flex [&>div]:!rounded-none"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(250, 58, 0);"
                >
                  <svg
                    height="24"
                    width="24"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#18CDF2"
                      height="24"
                      transform="translate(-0.78629512784545 -2.47821305209537) rotate(328.9 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#035E56"
                      height="24"
                      transform="translate(-13.72384628162403 7.94434640381145) rotate(176.2 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#F26602"
                      height="24"
                      transform="translate(12.50088151366794 -10.65385479224781) rotate(468.9 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
              style="flex: 1; min-width: 0;"
            >
              <div
                class="mm-box mm-box--gap-2 mm-box--flex-direction-column"
                style="min-width: 0; flex: 1;"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
                >
                  Test Account
                </p>
                <p
                  class="mm-box mm-text mm-text--body-xs mm-text--ellipsis mm-box--color-text-default"
                >
                  0x0dcd5d886577d5081b0c52e242ef29e70be3e7bc
                </p>
              </div>
            </div>
            <span
              class="mm-box snap-ui-renderer__matched-account-info__clear-button mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-info-default"
              style="mask-image: url('./images/icons/close.svg'); cursor: not-allowed; flex-shrink: 0;"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAddressInput renders with an invalid CAIP Account ID 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-form-text-field snap-ui-renderer__address-input mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
          >
            <input
              autocomplete="off"
              class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
              focused="false"
              id="input"
              type="text"
              value="https://foobar.baz/foobar"
            />
            <span
              class="mm-box snap-ui-renderer__address-input__clear-button mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-info-default"
              style="mask-image: url('./images/icons/close.svg'); cursor: pointer;"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAddressInput will not render avatar when displayAvatar is false 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-form-text-field snap-ui-renderer__address-input mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
          >
            <input
              autocomplete="off"
              class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
              focused="false"
              id="input"
              type="text"
              value="0xabcd5d886577d5081b0c52e242ef29e70be3e7bc"
            />
            <span
              class="mm-box snap-ui-renderer__address-input__clear-button mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-info-default"
              style="mask-image: url('./images/icons/close.svg'); cursor: pointer;"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAddressInput will render 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-form-text-field snap-ui-renderer__address-input mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
          >
            <input
              autocomplete="off"
              class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
              focused="false"
              id="input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAddressInput will render a matched address name 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box snap-ui-renderer__matched-account-info mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
            style="height: 48px; opacity: 1; cursor: auto;"
          >
            <div
              class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
            >
              <div
                class="flex [&>div]:!rounded-none"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(250, 58, 0);"
                >
                  <svg
                    height="24"
                    width="24"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#18CDF2"
                      height="24"
                      transform="translate(-0.78629512784545 -2.47821305209537) rotate(328.9 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#035E56"
                      height="24"
                      transform="translate(-13.72384628162403 7.94434640381145) rotate(176.2 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#F26602"
                      height="24"
                      transform="translate(12.50088151366794 -10.65385479224781) rotate(468.9 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
              style="flex: 1; min-width: 0;"
            >
              <div
                class="mm-box mm-box--gap-2 mm-box--flex-direction-column"
                style="min-width: 0; flex: 1;"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
                >
                  Test Account
                </p>
                <p
                  class="mm-box mm-text mm-text--body-xs mm-text--ellipsis mm-box--color-text-default"
                >
                  0x0dcd5d886577d5081b0c52e242ef29e70be3e7bc
                </p>
              </div>
            </div>
            <span
              class="mm-box snap-ui-renderer__matched-account-info__clear-button mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-info-default"
              style="mask-image: url('./images/icons/close.svg'); cursor: pointer; flex-shrink: 0;"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAddressInput will render avatar when displayAvatar is true 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-form-text-field snap-ui-renderer__address-input mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
          >
            <div
              class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
            >
              <div
                class="flex [&>div]:!rounded-none"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(242, 202, 2);"
                >
                  <svg
                    height="24"
                    width="24"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#03405E"
                      height="24"
                      transform="translate(-5.10322745178983 -4.00545785380792) rotate(369.5 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#FAA200"
                      height="24"
                      transform="translate(4.65401715943415 -10.42267189532552) rotate(387.5 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#016F8E"
                      height="24"
                      transform="translate(-16.38031686102804 -8.91841489898652) rotate(241.5 12.00000000000000 12.00000000000000)"
                      width="24"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              autocomplete="off"
              class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
              focused="false"
              id="input"
              type="text"
              value="0xabcd5d886577d5081b0c52e242ef29e70be3e7bc"
            />
            <span
              class="mm-box snap-ui-renderer__address-input__clear-button mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-info-default"
              style="mask-image: url('./images/icons/close.svg'); cursor: pointer;"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;
